<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--YOUR API KEY HERE-->
    <string name="api_key"></string>

    <!--Day Strings-->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>

    <!--Round-->
    <string name="matchday_text">Matchday</string>
    <string name="matchdday_colo">Matchday: </string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First Knockout Round</string>
    <string name="quarter_final">Quarterfinal</string>
    <string name="semi_final">Semifinal</string>
    <string name="final_text">Final</string>
    <string name="gs_matchday6">Group Stages, Matchday: 6</string>

    <!--League-->
    <string name="seriaa" translatable="false">Seria A</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="champions_league" translatable="false">UEFA Champions League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="bundesliga" translatable="false">Bundesliga</string>
    <string name="no_league">Not Known League Please Report</string>

    <!--Team Names -->
    <string name="arsenal" translatable="false">Arsenal London FC</string>
    <string name="manchester" translatable="false">Manchester United FC</string>
    <string name="swansea" translatable="false">Swansea City</string>
    <string name="leicester" translatable="false">Leicester City</string>
    <string name="everton" translatable="false">Everton FC</string>
    <string name="west_ham" translatable="false">West Ham United FC</string>
    <string name="tottenham" translatable="false">Tottenham Hotspur FC</string>
    <string name="west_brom" translatable="false">West Bromwich Albion</string>
    <string name="sunderland" translatable="false">Sunderland FC</string>
    <string name="stroke" translatable="false">Stroke City FC</string>


    <!--Menu Strings-->
    <string name="app_name">Football Scores</string>
    <string name="action_settings">Settings</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"Manchester United FC\",\"awayTeamName\":\"West Bromwich Albion\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":5}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"Swansea City\",\"awayTeamName\":\"West Bromwich Albion\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":2}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"Arsenal London FC\",\"awayTeamName\":\"Manchester United FC\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":3}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"Swansea City\",\"awayTeamName\":\"West Bromwich Albion\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"Manchester United FC\",\"awayTeamName\":\"Swansea City\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":5}}]}</string>


    <!--Content Descriptions -->
    <string name="contdes_about">A description of the app\'s function.</string>
    <string name="contdes_home_crest">An image of the home team\'s crest.</string>
    <string name="contdes_home_name">The home team\'s name.</string>
    <string name="contdes_score">The score of the game.</string>
    <string name="contdes_data">Game related data.</string>
    <string name="contdes_away_crest">An image of the away team\'s crest.</string>
    <string name="contdes_away_name">The away team\'s name.</string>
    <string name="contdes_league">The league of the match</string>
    <string name="contdes_matchday">The date of the match</string>
    <string name="contdes_share_button">Button for sharing scores</string>

    <!--Widget Strings -->
    <string name="title_widget_game">Game Widget</string>
    <string name="title_widget_Collection">Collection Widget</string>
    <string name="widget_text">This is a widget probably.</string>

    <!--Misc Strings-->
    <string name="hashtag">#Football_Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_text">Test</string>
</resources>
