<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"

    >

    <LinearLayout
        android:id="@+id/widget"
        android:background="@color/green13"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contdes_home_crest" />

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contdes_home_name"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/contdes_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/Score"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/data_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/contdes_data"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contdes_away_crest" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contdes_away_name"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:textColor="@color/black"/>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>